--- a/package.json
+++ b/package.json
@@ -36,7 +36,11 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"bits-ui": "^0.21.2",
 		"clsx": "^2.1.0",
+		"embla-carousel-autoplay": "^8.0.1",
+		"embla-carousel-svelte": "^8.0.1",
+		"lucide-svelte": "^0.367.0",
 		"tailwind-merge": "^2.2.2",
 		"tailwind-variants": "^0.2.1"
 	}
