--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"embla-carousel-autoplay": "^8.0.1",
 		"embla-carousel-svelte": "^8.0.1",
 		"lucide-svelte": "^0.367.0",
+		"mode-watcher": "^0.3.0",
 		"tailwind-merge": "^2.2.2",
 		"tailwind-variants": "^0.2.1"
 	}
