Team section completed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,48 @@
 {
 	"cSpell.words": [
+		"araw",
 		"autoplay",
+		"Babaylan",
 		"clsx",
+		"Diliman",
+		"DOTA",
+		"Duterte",
 		"embla",
+		"Gazmen",
+		"inisip",
+		"kapani",
+		"Kaya",
+		"kinikita",
+		"LTFRB",
 		"lucide",
+		"mababaon",
+		"mababawasan",
+		"makapagbayad",
+		"Mangingisda",
+		"marahil",
+		"maremdior",
 		"modernisasyon",
-		"pcss"
+		"naman",
+		"nito",
+		"niya",
+		"pagaapply",
+		"Pahirapan",
+		"pangaraw",
+		"paniwala",
+		"PAREX",
+		"pcss",
+		"Pinoy",
+		"proyekto",
+		"puvm",
+		"PUVMP",
+		"Rappler",
+		"sapat",
+		"sobrang",
+		"talaga",
+		"tapos",
+		"transpo",
+		"utang",
+		"Welga"
 	],
-	"cSpell.ignoreWords": [
-		"Moder",
-		"ation"
-	]
+	"cSpell.ignoreWords": ["Moder", "ation"]
 }
